WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59742
Speech layout test failures after
r85190
(?)
https://bugs.webkit.org/show_bug.cgi?id=59742
Summary
Speech layout test failures after r85190 (?)
Kenneth Russell
Reported
2011-04-28 14:51:04 PDT
It looks like the speech-related commits in
r85190
and
r85191
may have introduced a couple of layout test failures, in particular fast/speech/input-appearance-numberandspeech.html and fast/speech/input-appearance-speechbutton.html . See:
http://build.chromium.org/p/chromium.webkit/builders/Webkit%20Mac10.6/builds/2936
http://build.chromium.org/p/chromium.webkit/builders/Webkit%20Mac10.5%20%28dbg%29%282%29/builds/1995
http://build.chromium.org/p/chromium.webkit/builders/Webkit%20Mac10.6%20%28dbg%29/builds/1202
Adding suppressions for these failures.
Attachments
Patch
(647.05 KB, patch)
2011-05-03 07:06 PDT
,
Satish Sampath
no flags
Details
Formatted Diff
Diff
Patch
(1.05 MB, patch)
2011-05-03 07:52 PDT
,
Satish Sampath
no flags
Details
Formatted Diff
Diff
Fixes the last failing layout test
(275.92 KB, patch)
2011-05-04 02:20 PDT
,
Satish Sampath
tonyg
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2011-04-30 23:34:13 PDT
Hmm input-appearance-numberandspeech.html looks very wrong.
Satish Sampath
Comment 2
2011-05-03 07:06:38 PDT
Created
attachment 92071
[details]
Patch
Satish Sampath
Comment 3
2011-05-03 07:52:45 PDT
Created
attachment 92075
[details]
Patch
Satish Sampath
Comment 4
2011-05-04 02:20:18 PDT
Created
attachment 92202
[details]
Fixes the last failing layout test
Satish Sampath
Comment 5
2011-05-04 02:41:41 PDT
Committed
r85726
: <
http://trac.webkit.org/changeset/85726
>
Hajime Morrita
Comment 6
2011-05-04 17:51:08 PDT
http://trac.webkit.org/changeset/85817
Look flaky yet. I'm marking them at this time.
Hajime Morrita
Comment 7
2011-05-05 01:47:08 PDT
Reverted the change above (
r85817
). It looks over-skipped.
http://trac.webkit.org/changeset/85845
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug