2011-05-04  Satish Sampath  <satish@chromium.org>

Reviewed by Tony Gentilcore.

        Layout the speech input button to the left of outer spin button properly.
        https://bugs.webkit.org/show_bug.cgi?id=59742

        * platform/chromium-mac/fast/speech/input-appearance-numberandspeech-expected.png:
        * platform/chromium-mac/fast/speech/input-appearance-numberandspeech-expected.txt:
        * platform/chromium/test_expectations.txt:
2011-05-04  Satish Sampath  <satish@chromium.org>

        Reviewed by Tony Gentilcore.

        Layout the speech input button to the left of outer spin button properly.
        https://bugs.webkit.org/show_bug.cgi?id=59742

        * rendering/RenderTextControlSingleLine.cpp:
        (WebCore::RenderTextControlSingleLine::layout):

Canonical link: https://commits.webkit.org/75411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85726 268f45cc-cd09-0410-ab3c-d52691b4dbfc